# realtime_plot_wasm

./: .gitignore  .python-version  Cargo.toml  README.md  issued.md  main.py  pyproject.toml  server.py
.marscode/: deviceInfo.json
examples/: server.rs
src/: app.rs  main.rs  server.py
