[package]
name = "my_example_ssr"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8", optional = true }
console_error_panic_hook = "0.1"
console_log = "1.0"
leptos = "0.8"
leptos_axum = { version = "0.8", optional = true }
# Use leptos_chartistry.version = "..." instead
leptos-chartistry = "0.2.2"
leptos_meta = "0.8"
leptos_router.version = "0.8"
leptos-use = "0.16.0"
log = "0.4"
tokio = { version = "1.47", features = ["full"], optional = true }
futures-util = "0.3"
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3", features = ["console", "Window","MessageEvent", "WebSocket"] }
chrono = { version = "0.4", features = ["serde"] }  # 添加 chrono 依赖
rand = "0.8"  # 添加 rand 依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3.77"
getrandom = { version = "0.2", optional = true }
[features]
hydrate = ["leptos/hydrate", "getrandom/js"]
ssr = [
  "dep:axum",
  "dep:leptos_axum",
  "dep:tower",
  "dep:tower-http",
  "dep:tokio",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos-use/ssr",
  "leptos_router/ssr",
]

[package.metadata.leptos]
bin-features = ["ssr"]
lib-features = ["hydrate"]


[[example]]
name = "server"
path = "examples/server.rs"




[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
rand = "0.8"          # 移到常规依赖，两端都能用
# getrandom = { version = "0.2", optional = true }




