[package]
name = "my_example_ssr"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8", features = ["ws"], optional = true }
tokio = { version = "1.47", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
log = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
leptos = "0.8"
leptos_axum = { version = "0.8", optional = true }
# Use leptos_chartistry.version = "..." instead
leptos-chartistry = "0.2.2"
leptos_meta = "0.8"
leptos_router.version = "0.8"
leptos-use = "0.16"

futures-util = "0.3"
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3", features = ["console", "Window","MessageEvent", "WebSocket"] }
js-sys = "0.3"
getrandom = { version = "0.2",optional = true }
[features]
hydrate = ["leptos/hydrate", "getrandom/js"]
ssr = [
  "dep:axum",
  "dep:leptos_axum",
  "dep:tower",
  "dep:tower-http",
  "dep:tokio",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos-use/ssr",
  "leptos_router/ssr",
]

[package.metadata.leptos]
bin-features = ["ssr"]
lib-features = ["hydrate"]

[dev-dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
rand = "0.9"
env_logger = "0.11"

[[example]]
name = "server"
path = "examples/server.rs"
